--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<! DOCTYPE html>
-
+<html>
+<head>
+  
+</head> 
+ <body>
+ <header>
+<nav>
+  <ul>
+    <li></li>
+    <li></li>
+  </ul>
+</nav> 
+<h3>
+  
+</h3>
+</header>  
+ </body> 
+  
+  
+  
+</html>
