--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html>
 <head>
  <title>
-   
+   title
  </title> 
 </head> 
  <body>
  <header>
 <nav>
   <ul>
-    <li></li>
-    <li></li>
+    <li>one</li>
+    <li>two</li>
   </ul>
 </nav> 
 <h3>
